<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/go_to_home">

    <fragment
        android:id="@+id/company"
        android:name="com.amk.stocktipsapp.UI.Company"
        android:label="@string/choose_company"
        tools:layout="@layout/fragment_company" />
    <fragment
        android:id="@+id/go_to_favorite"
        android:name="com.amk.stocktipsapp.UI.Favorite"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/go_to_home"
        android:name="com.amk.stocktipsapp.UI.ListCompanyFragment"
        android:label="@string/list_companies"
        tools:layout="@layout/fragment_list_company" >
        <action
            android:id="@+id/action_go_to_home_to_company"
            app:destination="@id/company"/>
    </fragment>
    <fragment
        android:id="@+id/go_to_settings"
        android:name="com.amk.stocktipsapp.UI.Settings"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>