<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_16"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:text="@string/text_name_company"
        android:textSize="@dimen/text_16"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nominal_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:text="@string/text_nominal"
        android:textSize="@dimen/text_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/brief_name_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:text="@string/text_brief_name_company"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_company" />

    <TextView
        android:id="@+id/change_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:text="@string/text_change_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nominal_price" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkBox_favorite"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.1"
        app:layout_constraintHeight_percent="0.4"
        android:layout_margin="@dimen/margin_8"
        app:layout_constraintTop_toBottomOf="@id/change_price"
        app:layout_constraintEnd_toEndOf="parent"
        android:button="@drawable/checkbox_favorite_selector" />

</androidx.constraintlayout.widget.ConstraintLayout>